@@ -9,27 +9,20 @@ wholewords=Paraules senceres
 regexp=Expressió regular
 noSubstitutionsTitle=No hi ha substitucions
 noSubstitutionsDescription=Heu de definir com a mínim una substitució.
-xmlGroupErrorText=S'han produït un o més errors processant un grup de substitució des d'XML. A continuació teniu la llista d'errors:
 importFromUrlTitle=Introdueix l'URL
 importFromUrlText=Introdueix l'URL des del qual vols importar la llista de substitució
 nonSupportedProtocol=Protocol no admès
 subscriptionStatusDisabled=Inactiu
 subscriptionStatusUpdating=S'està actualitzant...
 subscriptionStatusLastUpdated=Última actualització: %S
-xmlError=S'ha produït un error processant l'XML: %S
 cantConnectToServer=No es pot connectar amb el servidor especificat a l'URL %S
 httpError=Error d'HTTP: %S
 fileNotFound=No s'ha trobat el fitxer %S
 unexpectedError=Error inesperat: %S
 onlyHttp=Només s'admet HTTP.
-xmlErrorTitle=Error a l'XML
-xmlErrorText=S'ha produït un error processant l'XML:
 jsonErrorTitle=Error al JSON
 jsonErrorText=S'ha produït un error processant el JSON:
 jsonFiles=Fitxers JSON
-unrecognizedFormatTitle=No es reconeix el format
-unrecognizedFormatText=Només s'admet JSON i XML.
-unrecognizedFormat=No es reconeix el format. Només s'admet JSON i XML.
 generalSubstitutions=Substitucions generals
 substitutionsForUrl=Substitucions per a %S
 substitutionsForUrls=Substitucions per a %S i altres
