@@ -9,27 +9,20 @@ wholewords=Whole words
 regexp=Regular expression
 noSubstitutionsTitle=No substitutions
 noSubstitutionsDescription=You must define at least one substitution.
-xmlGroupErrorText=One or more errors have ocurred while processing a substitution group from XML. Below there is the error list:
 importFromUrlTitle=Enter URL
 importFromUrlText=Enter the URL from which you want to import the substitutions list
 nonSupportedProtocol=Non-supported protocol
 subscriptionStatusDisabled=Disabled
 subscriptionStatusUpdating=Updating...
 subscriptionStatusLastUpdated=Last update: %S
-xmlError=Error while processing XML: %S
 cantConnectToServer=Can't connect to the server specified in the URL %S
 httpError=HTTP error: %S
 fileNotFound=File %S not found
 unexpectedError=Unexpected error: %S
 onlyHttp=Only HTTP is supported.
-xmlErrorTitle=Error in XML
-xmlErrorText=Error while processing XML:
 jsonErrorTitle=Error in JSON
 jsonErrorText=Error while processing JSON:
 jsonFiles=JSON files
-unrecognizedFormatTitle=Unrecognized format
-unrecognizedFormatText=Only JSON and XML are supported.
-unrecognizedFormat=Unrecognized format. Only JSON and XML are supported.
 generalSubstitutions=General substitutions
 substitutionsForUrl=Substitutions for %S
 substitutionsForUrls=Substitutions for %S and others
