@@ -1,4 +1,5 @@
 * Animated showing and hiding of the replace bar.
+* Removed support to substitution lists in XML.
 * Compatibility with Firefox from 19.0 to 34.0.
 
 v0.16.1 (2014-06-13)
